objects/MasterValidation__c.object
<CustomObject>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegexExpression__c</fullName>
        <label>RegexExpression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatorCallback__c</fullName>
        <label>ValidatorCallback</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>MasterValidation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MasterValidation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MasterValidations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>